--- a/.github/workflows/generate-snake.yml
+++ b/.github/workflows/generate-snake.yml
@@ -9,7 +9,7 @@ jobs:
   generate:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout Repository
+      - name: Checkout the repository
         uses: actions/checkout@v4
 
       - name: Generate Snake Animation
@@ -18,7 +18,7 @@ jobs:
           github_user_name: kejian-tong
           outputs: dist/github-contribution-grid-snake.svg
 
-      - name: Push Generated Animation
+      - name: Push the SVG to the output branch
         uses: crazy-max/ghaction-github-pages@v3
         with:
           target_branch: output
